worked on home page

--- a/src/Pages/Home/index.module.scss
+++ b/src/Pages/Home/index.module.scss
@@ -21,3 +21,38 @@
         font-size: 30px;
     }
 }
+.homeTop{
+    padding-top: 30px;
+    padding-bottom: 70px;
+    padding-left: 20px;
+}
+.aboutSchool{
+    font-size: 25px;
+    font-weight: 600;
+    padding-left: 88px;
+}
+.visionlabel{
+    font-size: 25px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+
+}
+.visionsublabel{
+    font-size: 20px;
+    padding: 35px;
+    font-weight: 400;
+}
+.aboutsection{
+    display: flex;
+    justify-content:space-around;
+    padding-top: 40px;
+}
+.imagesStyle{
+    width: 400px;
+    height: 270px;
+}
+.labeltitle{
+    width: 50%;
+}
